--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,8 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    overflow-y: auto; /* Ensures vertical scrolling */
+    overflow-x: hidden; /* Prevents horizontal scrolling */
     margin: 0;
     padding: 0;
     background: linear-gradient(135deg, #f0ece2, #a29bfe);
